# gaussian-splatting-colab

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD_INSTRUCTIONS.md  CHANGELOG_COLMAP_CUDA.md  Dockerfile  Gaussian_Splatting_Colab.ipynb  Gemini_MakerSuite_Colab.ipynb  Gemini_Setup_Cleaned.ipynb  IMPLEMENTATION_NOTES.md  NEXT_STEPS.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  {.ipynb
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: COLMAP_CUDA_BUILD.md  LOCAL_SETUP.md  SETUP_COMPARISON.md  WSL2.md
notebooks/: README.md
scenes/: README.md
scripts/: README.md  convert-colmap.py  convert_heic.py  make_input_jpgs.py  run_local.py  train.py  verify-colmap-cuda.sh
src/: README.md  orchestrator.py
src/colmap/: __init__.py
src/convert/: __init__.py
src/core/: env.py
src/training/: __init__.py
tests/: README.md  test_env.py
